--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.11.0",
+    "@types/helmet": "^0.0.37",
     "@types/mkdirp": "^0.5.2",
     "@types/morgan": "^1.7.35",
     "@types/request": "^2.0.9",
@@ -27,6 +28,7 @@
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
+    "helmet": "^3.9.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
     "pug": "^2.0.0-rc.4",
